# utils

./: CMakeLists.txt
doc/api/: CMakeLists.txt  Doxyfile.in
doc/api/pages/: main.markdown
include/utils/: bimap.h  bimapiterator.h  bimappair.h  byte.h  fastpimpl.h  metacall.h  recursivespinlock.h  spinlock.h  spinlocker.h
src/: CMakeLists.txt  bimap.h  bimapiterator.h  bimappair.h  byte.h  clogging.cpp  clogging.h  dsvstream.cpp  dsvstream.h  fastpimpl.h  hashcombine.h  metacall.h  recursivespinlock.cpp  recursivespinlock.h  spinlock.cpp  spinlock.h  spinlocker.h  utilsglobal.h
tests/auto/tst_dsvstream/: CMakeLists.txt  tst_dsvstream.cpp
